syntax = 'proto3';

package api.v1;

option go_package = 'api/v1';

// sessions -(many)-> tables

message Session {
  // id - id of the session.
  string id = 1;
  // tables - tables in the session.
  repeated TableSchema tables = 2;
}

message TableQuery {
  // table - name of the table to query.
  string table = 1;
  // columns - columns to return.
  repeated string columns = 2;
  // where_clauses - where clause to filter results.
  repeated string where_clauses = 3;
  // order_by_clauses - order by clause.
  repeated string order_by_clauses = 4;
}

message TableKeyValue {
  // key - key of the table column.
  string key = 1;
  // value - value of the table column.
  bytes value = 2;
}

message TableRow {
  repeated TableKeyValue columns = 1;
}

message TableColumn {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_BOOL = 1;
    TYPE_DATE_TIME = 2;
    TYPE_INT64 = 3;
    TYPE_REAL = 4;
    TYPE_STRING = 5;
    TYPE_TIMESPAN = 6;
  }

  // key - key of the table column.
  string key = 1;
  // type - type of the table column.
  Type type = 2;
}

message TableSchema {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_RAW = 1;
    TYPE_PARSED = 2;
  }

  // name - name of the table.
  string name = 1;
  // type - type of the table.
  Type type = 2;
  // columns - columns of the table.
  repeated TableColumn columns = 3;
}